--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -5,7 +5,7 @@ VAPI_FILES = gst-rtsp-server-0.10.vapi
 gst-rtsp-server-0.10.deps:
 	cp $(srcdir)/packages/gst-rtsp-server-0.10.deps $@
     
-vapidir = $(VAPIDIR)
+vapidir = $(datadir)/vala/vapi
 vapi_DATA = $(VAPI_FILES) $(DEPS_FILES)
 
 EXTRA_DIST = packages $(VAPI_FILES)
