--- a/tests/examples/Makefile.am
+++ b/tests/examples/Makefile.am
@@ -1,5 +1,5 @@
-SUBDIRS = audiofx equalizer level rtp shapewipe spectrum v4l2
+SUBDIRS = audiofx equalizer level pulse rtp shapewipe spectrum v4l2
 
-DIST_SUBDIRS = audiofx equalizer level rtp shapewipe spectrum v4l2
+DIST_SUBDIRS = audiofx equalizer level pulse rtp shapewipe spectrum v4l2
 
 include $(top_srcdir)/common/parallel-subdirs.mak
