bitreader: Add inlined and unchecked versions of the important functions
API: gst_bit_reader_skip_unchecked
API: gst_bit_reader_skip_to_byte_unchecked
API: gst_bit_reader_get_bits_uint16_unchecked
API: gst_bit_reader_get_bits_uint32_unchecked
API: gst_bit_reader_get_bits_uint64_unchecked
API: gst_bit_reader_get_bits_uint8_unchecked
API: gst_bit_reader_peek_bits_uint16_unchecked
API: gst_bit_reader_peek_bits_uint32_unchecked
API: gst_bit_reader_peek_bits_uint64_unchecked
API: gst_bit_reader_peek_bits_uint8_unchecked

This alone makes flacparse about 3 times faster.

--- a/libs/gst/base/Makefile.am
+++ b/libs/gst/base/Makefile.am
@@ -36,7 +36,8 @@ libgstbase_@GST_MAJORMINOR@include_HEADERS =	\
 	gstdataqueue.h
 
 noinst_HEADERS = \
-	gstbytereader-docs.h
+	gstbytereader-docs.h \
+	gstbitreader-docs.h
 
 CLEANFILES = *.gcno *.gcda *.gcov
 
