--- a/ext/raw1394/Makefile.am
+++ b/ext/raw1394/Makefile.am
@@ -1,7 +1,15 @@
 plugin_LTLIBRARIES = libgst1394.la
 
+if USE_LIBIEC61883
+hdvsource = gsthdv1394src.c
+hdvheaders = gsthdv1394src.h
+else
+hdvsource = 
+hdvheaders = 
+endif
+
 libgst1394_la_SOURCES = \
-	gst1394.c gst1394probe.c gstdv1394src.c gsthdv1394src.c \
+	gst1394.c gst1394probe.c gstdv1394src.c $(hdvsource) \
 	gst1394clock.c
 libgst1394_la_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
@@ -16,6 +24,6 @@ libgst1394_la_LIBADD = \
 libgst1394_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgst1394_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstdv1394src.h gst1394probe.h gsthdv1394src.h \
+noinst_HEADERS = gstdv1394src.h gst1394probe.h $(hdvheaders) \
 	gst1394clock.h
 
