--- a/tests/check/elements/.gitignore
+++ b/tests/check/elements/.gitignore
@@ -1,5 +1,6 @@
 .dirstamp
 aacparse
+ac3parse
 amrparse
 asfmux
 assrender
@@ -9,6 +10,7 @@ deinterleave
 dataurisrc
 faac
 faad
+flacparse
 gdpdepay
 gdppay
 id3mux
@@ -18,6 +20,7 @@ jpegparse
 kate
 legacyresample
 mpeg2enc
+mpegaudioparse
 mplex
 mxfdemux
 mxfmux
