gst: add math-compat.h header
Add minimal math-compath.h header where we can define fallback
versions for miscellaneous math functions that aren't always
available, so we don't have to duplicate this in plugins.
The header is not included by default, so needs to be
included explicitly for now.

https://bugzilla.gnome.org/show_bug.cgi?id=630802

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -196,7 +196,8 @@ gst_headers =			\
 	gstparse.h		\
 	gstxml.h
 
-libgstreamer_@GST_MAJORMINOR@include_HEADERS = $(gst_headers)
+libgstreamer_@GST_MAJORMINOR@include_HEADERS = $(gst_headers) math-compat.h
+
 nodist_libgstreamer_@GST_MAJORMINOR@include_HEADERS = \
 	$(built_header_configure) $(built_header_make)
 
