--- a/gst/coloreffects/Makefile.am
+++ b/gst/coloreffects/Makefile.am
@@ -2,15 +2,19 @@ plugin_LTLIBRARIES = libgstcoloreffects.la
 
 libgstcoloreffects_la_SOURCES = \
 	gstplugin.c \
-	gstcoloreffects.c
+	gstcoloreffects.c \
+	gstchromahold.c
 libgstcoloreffects_la_CFLAGS = \
 	$(GST_PLUGINS_BASE_CFLAGS) \
+	$(GST_CONTROLLER_CFLAGS) \
+	$(GST_BASE_CFLAGS) \
 	$(GST_CFLAGS)
 libgstcoloreffects_la_LIBADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgstvideo-@GST_MAJORMINOR@ \
+	$(GST_CONTROLLER_LIBS) \
 	$(GST_BASE_LIBS) \
 	$(GST_LIBS)
 libgstcoloreffects_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstcoloreffects_la_LIBTOOLFLAGS = --tag=disable-static
 
-noinst_HEADERS = gstcoloreffects.h
+noinst_HEADERS = gstcoloreffects.h gstchromahold.h
