audioparse: Add support for setting the channel-positions

--- a/gst/rawparse/Makefile.am
+++ b/gst/rawparse/Makefile.am
@@ -1,9 +1,20 @@
 
 plugin_LTLIBRARIES = libgstrawparse.la
 
-libgstrawparse_la_SOURCES = gstrawparse.c gstaudioparse.c gstvideoparse.c plugin.c
-libgstrawparse_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-libgstrawparse_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS) -lgstvideo-@GST_MAJORMINOR@
+libgstrawparse_la_SOURCES = \
+	gstrawparse.c \
+	gstaudioparse.c \
+	gstvideoparse.c \
+	plugin.c
+libgstrawparse_la_CFLAGS = \
+		$(GST_PLUGINS_BASE_CFLAGS) \
+		$(GST_BASE_CFLAGS) \
+		$(GST_CFLAGS)
+libgstrawparse_la_LIBADD = \
+	$(GST_PLUGINS_BASE_LIBS) \
+	-lgstvideo-@GST_MAJORMINOR@ -lgstaudio-@GST_MAJORMINOR@ \
+	$(GST_BASE_LIBS) \
+	$(GST_LIBS)
 libgstrawparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstrawparse_la_LIBTOOLFLAGS = --tag=disable-static
 
