--- a/ges/Makefile.am
+++ b/ges/Makefile.am
@@ -39,6 +39,7 @@ libges_@GST_MAJORMINOR@_la_SOURCES = 		\
 	ges-track-text-overlay.c		\
 	ges-screenshot.c			\
 	ges-formatter.c				\
+	ges-keyfile-formatter.c			\
 	ges-utils.c
 
 libges_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/ges/
@@ -76,6 +77,7 @@ libges_@GST_MAJORMINOR@include_HEADERS = 	\
 	ges-track-text-overlay.h		\
 	ges-screenshot.h			\
 	ges-formatter.h				\
+	ges-keyfile-formatter.h			\
 	ges-utils.h
 
 libges_@GST_MAJORMINOR@_la_CFLAGS = -I$(top_srcdir) $(GST_PROFILE_CFLAGS) $(GST_PBUTILS_CFLAGS) $(GST_VIDEO_CFLAGS) $(GST_CONTROLLER_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
