--- a/gst-libs/gst/Makefile.am
+++ b/gst-libs/gst/Makefile.am
@@ -2,7 +2,8 @@ if BUILD_EXPERIMENTAL
 EXPERIMENTAL_LIBS=basecamerabinsrc
 endif
 
-SUBDIRS = interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
+SUBDIRS = baseparse interfaces signalprocessor video $(EXPERIMENTAL_LIBS)
 
 noinst_HEADERS = gst-i18n-plugin.h gettext.h
-DIST_SUBDIRS = interfaces signalprocessor video basecamerabinsrc
+DIST_SUBDIRS = baseparse interfaces signalprocessor video basecamerabinsrc
+
