gst: Update to latest 0.10.31 core/base API

--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -34,11 +34,13 @@ versioned_overrides = \
 	gst-0.10.26.ignore 	\
 	gst-0.10.29.ignore 	\
 	gst-0.10.30.ignore 	\
+	gst-0.10.31.ignore 	\
 	gst-pb-0.10.23.ignore	\
 	gst-pb-0.10.25.ignore	\
 	gst-pb-0.10.26.ignore	\
 	gst-pb-0.10.29.ignore	\
 	gst-pb-0.10.30.ignore	\
+	gst-pb-0.10.31.ignore	\
 	gst-disable-loadsave.ignore
 
 INCLUDES = $(PYTHON_INCLUDES)
