--- a/configure.ac
+++ b/configure.ac
@@ -174,6 +174,13 @@ then
     IGNORE_GST_0_10_30=""
   fi
 
+  if test $GST_MINOR_VERSION -lt "31"
+  then
+    IGNORE_GST_0_10_31="gst-0.10.31.ignore"
+  else
+    IGNORE_GST_0_10_31=""
+  fi
+
   dnl plugins base
   if test $GST_PB_MINOR_VERSION -ge "22"
   then
@@ -217,6 +224,13 @@ then
   else
     IGNORE_GST_PB_0_10_30=""
   fi
+
+  if test $GST_PB_MINOR_VERSION -lt "31"
+  then
+    IGNORE_GST_PB_0_10_31="gst-pb-0.10.31.ignore"
+  else
+    IGNORE_GST_PB_0_10_31=""
+  fi
 else
   IGNORE_GST_0_10_18=""
   IGNORE_GST_0_10_20=""
@@ -228,11 +242,13 @@ else
   IGNORE_GST_0_10_26=""
   IGNORE_GST_0_10_29=""
   IGNORE_GST_0_10_30=""
+  IGNORE_GST_0_10_31=""
   IGNORE_GST_PB_0_10_23=""
   IGNORE_GST_PB_0_10_25=""
   IGNORE_GST_PB_0_10_26=""
   IGNORE_GST_PB_0_10_29=""
   IGNORE_GST_PB_0_10_30=""
+  IGNORE_GST_PB_0_10_31=""
   AC_DEFINE_UNQUOTED(HAVE_GST_AUDIO, 1, [We can use the gst-audio library])
   AC_DEFINE_UNQUOTED(HAVE_GST_VIDEO, 1, [We can use the gst-video library])
   AC_DEFINE_UNQUOTED(HAVE_GST_TAG, 1, [We can use the gst-tag library])
@@ -247,11 +263,13 @@ AC_SUBST(IGNORE_GST_0_10_25)
 AC_SUBST(IGNORE_GST_0_10_26)
 AC_SUBST(IGNORE_GST_0_10_29)
 AC_SUBST(IGNORE_GST_0_10_30)
+AC_SUBST(IGNORE_GST_0_10_31)
 AC_SUBST(IGNORE_GST_PB_0_10_23)
 AC_SUBST(IGNORE_GST_PB_0_10_25)
 AC_SUBST(IGNORE_GST_PB_0_10_26)
 AC_SUBST(IGNORE_GST_PB_0_10_29)
 AC_SUBST(IGNORE_GST_PB_0_10_30)
+AC_SUBST(IGNORE_GST_PB_0_10_31)
 AM_CONDITIONAL(HAVE_GST_AUDIO, $HAVE_GST_AUDIO)
 AM_CONDITIONAL(HAVE_GST_VIDEO, $HAVE_GST_VIDEO)
 AM_CONDITIONAL(HAVE_GST_TAG, $HAVE_GST_TAG)
