--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -22,7 +22,8 @@ defs_DATA = gst-types.defs \
 	pbutils.defs
 defsdir = $(pkgdatadir)/$(GST_MAJORMINOR)/defs
 
-noinst_HEADERS = common.h pygstvalue.h pygstminiobject.h pygstexception.h
+noinst_HEADERS = common.h pygstvalue.h pygstminiobject.h pygstexception.h \
+	pygst.h pygst-private.h
 
 versioned_overrides = \
 	gst-0.10.21.ignore 	\
