realmedia: Get codec name from pbutils instead of harcoding them

--- a/gst/realmedia/Makefile.am
+++ b/gst/realmedia/Makefile.am
@@ -9,7 +9,7 @@ libgstrmdemux_la_SOURCES = rademux.c rmdemux.c  \
 
 libgstrmdemux_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS)
 libgstrmdemux_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS)\
-	     -lgstrtsp-@GST_MAJORMINOR@ -lgstsdp-@GST_MAJORMINOR@
+	     -lgstrtsp-@GST_MAJORMINOR@ -lgstsdp-@GST_MAJORMINOR@ -lgstpbutils-@GST_MAJORMINOR@
 libgstrmdemux_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstrmdemux_la_LIBTOOLFLAGS = --tag=disable-static
 
