--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -75,6 +75,7 @@ libgstreamer_@GST_MAJORMINOR@_la_SOURCES = \
 	gstinfo.c		\
 	gstinterface.c		\
 	gstiterator.c		\
+	gstatomicqueue.c	\
 	gstmessage.c		\
 	gstminiobject.c		\
 	gstpad.c		\
@@ -167,6 +168,7 @@ gst_headers =			\
 	gstinfo.h		\
 	gstinterface.h		\
 	gstiterator.h		\
+	gstatomicqueue.h	\
 	gstmacros.h		\
 	gstmessage.h		\
 	gstminiobject.h		\
