--- a/gst/realmedia/Makefile.am
+++ b/gst/realmedia/Makefile.am
@@ -7,9 +7,12 @@ libgstrmdemux_la_SOURCES = rademux.c rmdemux.c  \
 			   pnmsrc.c realmedia.c
 
 
-libgstrmdemux_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS)
-libgstrmdemux_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS)\
-	     -lgstrtsp-@GST_MAJORMINOR@ -lgstsdp-@GST_MAJORMINOR@ -lgstpbutils-@GST_MAJORMINOR@
+libgstrmdemux_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
+libgstrmdemux_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) \
+				-lgstrtsp-@GST_MAJORMINOR@ \
+				-lgstsdp-@GST_MAJORMINOR@ \
+				-lgstpbutils-@GST_MAJORMINOR@ \
+				$(GST_BASE_LIBS) $(GST_LIBS)
 libgstrmdemux_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstrmdemux_la_LIBTOOLFLAGS = --tag=disable-static
 
