tools: rename gst-discoverer binary to gst-discoverer-0.10
We're not providing a wrapper like we do for the tools in core,
since wrappers are confusing (e.g. for debugging purposes),
mostly pointless (since the API is likely to change between
major versions), and cause packaging issues when packages for
two different major versions are to be installed in parallel.

https://bugzilla.gnome.org/show_bug.cgi?id=633023

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -5,13 +5,15 @@ man_MANS = \
         gst-visualise-@GST_MAJORMINOR@.1
 
 bin_PROGRAMS = \
-	gst-discoverer
+	gst-discoverer-@GST_MAJORMINOR@
+
+gst_discoverer_@GST_MAJORMINOR@_SOURCES = gst-discoverer.c
 
 CLEANFILES = $(man_MANS) $(bin_SCRIPTS) $(bin_PROGRAMS)
 
 EXTRA_DIST = \
-	gst-visualise-m.m gst-visualise.1.in \
-	gst-discoverer.c
+	gst-visualise-m.m gst-visualise.1.in
+
 
 LDADD = $(top_builddir)/gst-libs/gst/pbutils/libgstpbutils-@GST_MAJORMINOR@.la\
 	$(top_builddir)/gst-libs/gst/video/libgstvideo-@GST_MAJORMINOR@.la\
